add ASM8_EXPERIMENTAL API + support of PermittedSubtypes attribute