@@ -48,6 +48,14 @@ public interface Opcodes {
   int ASM6 = 6 << 16 | 0 << 8;
   int ASM7 = 7 << 16 | 0 << 8;
 
+  /**
+   * <i>Experimental, use at your own risk. This field will be renamed when it becomes stable, this
+   * will break existing code using it. Only code compiled with --enable-preview can use this.</i>
+   *
+   * @deprecated This API is experimental.
+   */
+  @Deprecated int ASM8_EXPERIMENTAL = 1 << 24 | 8 << 16 | 0 << 8;
+
   /*
    * Internal flags used to redirect calls to deprecated methods. For instance, if a visitOldStuff
    * method in API_OLD is deprecated and replaced with visitNewStuff in API_NEW, then the
